Slide class creation

--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+  <div class="slide-wrapper">
+    <ul class="slide">
+      <li><img scr="img/foto1.jpg"></li>
+      <li><img scr="img/foto2.jpg"></li>
+      <li><img scr="img/foto3.jpg"></li>
+      <li><img scr="img/foto4.jpg"></li>
+      <li><img scr="img/foto5.jpg"></li>
+      <li><img scr="img/foto6.jpg"></li>
+    </ul>
+  </div>
   <script type="module" src="js/script.js"></script>
 </body>
 </html>
