--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 <body>
   <div class="slide-wrapper">
     <ul class="slide">
-      <li><img scr="img/foto1.jpg"></li>
-      <li><img scr="img/foto2.jpg"></li>
-      <li><img scr="img/foto3.jpg"></li>
-      <li><img scr="img/foto4.jpg"></li>
-      <li><img scr="img/foto5.jpg"></li>
-      <li><img scr="img/foto6.jpg"></li>
+      <li><img src="img/foto1.jpg" alt=""></li>
+      <li><img src="img/foto2.jpg" alt=""></li>
+      <li><img src="img/foto3.jpg" alt=""></li>
+      <li><img src="img/foto4.jpg" alt=""></li>
+      <li><img src="img/foto5.jpg" alt=""></li>
+      <li><img src="img/foto6.jpg" alt=""></li>
     </ul>
   </div>
   <script type="module" src="js/script.js"></script>
